feat: add claude command for skill management
Add `claude` subcommand to install/update/remove Claude Code skills
via npx. Refactors codex command logic into shared skill.ts module.

Changes:
- Add skill.ts with platform-agnostic install/remove logic
- Add claude.ts for Claude-specific command handlers
- Refactor cli.ts to use shared skill module
- Update README with npx installation instructions and warning

Version: 0.0.5

--- a/packages/debugsk/package.json
+++ b/packages/debugsk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "debugsk",
-  "version": "0.0.4",
-  "description": "Debug investigation CLI: server + Codex skill management for hypothesis-driven workflows.",
+  "version": "0.0.5",
+  "description": "Debug investigation CLI: server + skill management for Claude Code and Codex hypothesis-driven workflows.",
   "bin": {
     "debugsk": "dist/cli.js"
   },
