--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "typecheck": "pnpm --filter debugsk typecheck",
     "test": "pnpm --filter debugsk test",
     "format": "pnpm --filter debugsk format",
-    "format:write": "pnpm --filter debugsk format:write"
+    "format:write": "pnpm --filter debugsk format:write",
+    "release": "bash scripts/release.sh",
+    "release:patch": "bash scripts/release.sh patch",
+    "release:minor": "bash scripts/release.sh minor",
+    "release:major": "bash scripts/release.sh major"
   }
 }
